tests/bad/res2.pas
program res2;

var end: integer;

begin

end.
